# vgv-project-brain

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: DEPLOYMENT.md
docs/brainstorm/: 2026-04-09-auto-onboarding-github-app-brainstorm-doc.md  2026-04-09-google-drive-connector-brainstorm-doc.md
docs/plans/: 2026-03-13-vgv-project-rag-service.md  2026-03-14-vgv-project-rag-service-python.md  2026-04-09-feat-auto-onboarding-github-app-plan.md  2026-04-09-feat-google-drive-connector-plan.md
docs/reviews/: architecture-review.md  code-simplicity-review.md  pr-readiness-review.md  test-quality-review.md  vgv-review.md
scripts/: seed_project.py  setup_supabase.py
src/vgv_rag/: main.py
src/vgv_rag/config/: settings.py
src/vgv_rag/ingestion/: discovery.py  program_parser.py  project_hub_parser.py  scheduler.py
src/vgv_rag/ingestion/connectors/: atlassian.py  figma.py  github.py  google_drive.py  notion.py  slack.py  types.py
src/vgv_rag/processing/: chunker.py  embedder.py  metadata.py  reranker.py
src/vgv_rag/server/: auth.py  mcp_server.py
src/vgv_rag/server/tools/: ingest.py  list_sources.py  search.py
src/vgv_rag/storage/: client.py  migrate.py  pinecone_store.py  queries.py  supabase_queries.py
tests/: conftest.py  test_auth.py  test_chunker.py  test_discovery.py  test_embedder.py  test_pinecone_store.py  test_program_parser.py  test_project_hub_parser.py  test_reranker.py  test_scheduler.py  test_search_tool.py  test_settings.py  test_storage.py  test_supabase_queries.py  test_supabase_queries_programs.py  test_tools.py
tests/connectors/: test_atlassian.py  test_figma.py  test_github.py  test_google_drive.py  test_notion.py  test_slack.py
(+3 files in other folders)
